# Xephyr

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  doxy-xephyr  info.json  loadXephyr.C
class_reference/: AsymptoticExclusion_8h_source.html  ToyFitterExclusion_8h_source.html  ToyGenerator_8h_source.html  XeCore_8h_source.html  XeLikelihoods_8h_source.html  XeMath_8h_source.html  XePdfObjects_8h_source.html  XeStat_8h_source.html  XeUtils_8h_source.html  XeVersion_8h_source.html  annotated.html  classAsymptoticExclusion-members.html  classAsymptoticExclusion.html  classCI-members.html  classCI.html  classChi2Dist-members.html  classChi2Dist.html  classCombinedParameter-members.html  classCombinedParameter.html  classCombinedProfileLikelihood-members.html  classCombinedProfileLikelihood.html  classDataSet-members.html  classDataSet.html  classEquiContentBins-members.html  classEquiContentBins.html  classEquidistantBins-members.html  classEquidistantBins.html  classErRange-members.html  classErRange.html  classEventRange-members.html  classEventRange.html  classExclusion-members.html  classExclusion.html  classExponentialDist-members.html  classExponentialDist.html  classFlattener-members.html  classFlattener.html  classGaussianDist-members.html  classGaussianDist.html  classGeneralRange-members.html  (+214 more)
docs/: .buildinfo  AsymptoticExclusion_8h_source.html  HistLikelihood_8h_source.html  ToyFitter.html  ToyGenerator_example.html  XeAnalysis_8h_source.html  XeCore_8h_source.html  XeLikelihoods_8h_source.html  XeMath_8h_source.html  XePdfObjects_8h_source.html  XeStat_8h_source.html  XeTest_8h_source.html  XeUtilities_8h_source.html  XeVersion_8h_source.html  Xephyr_Packages.html  annotated.html  basics.html  classAllSelectionCutsS1-members.html  classAllSelectionCutsS1.html  classAsymptoticExclusion-members.html  classAsymptoticExclusion.html  classCI-members.html  classCI.html  classChi2Dist-members.html  classChi2Dist.html  classCombinedProfileLikelihood-members.html  classCombinedProfileLikelihood.html  (+348 more)
pacman/: CMakeLists.txt  CMakeLists_copyMe.txt  build.sh  check.py  installExample.sh
(+289 files in other folders)
